--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,8 @@
     <string name="app_name">SimpleTTDice</string>
     <string name="dice_type_prompt">Choose a dice</string>
 
+
+
     <string-array name="dice_type_array">
         <item>D20</item>
         <item>D10</item>
@@ -11,5 +13,14 @@
         <item>D8</item>
         <item>D100</item>
     </string-array>
+    <string name="d20">d20</string>
+    <string name="d10">d10</string>
+    <string name="d6">d6</string>
+    <string name="d12">d12</string>
+    <string name="d4">d4</string>
+    <string name="d8">d8</string>
+    <string name="d100">d100</string>
+    <string name="output_label_default">Roll…</string>
+    <string name="roll_button_text">Roll</string>
 
 </resources>
