--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">SimpleTTDice</string>
-    <string name="dice_type_prompt">選擇骰子</string>
+    <string name="dice_type_prompt">選擇骰種</string>
 
     <string-array name="dice_type_array">
         <item>20面骰</item>
