--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1,7 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">SimpleTTDice</string>
+
+    <string-array name="dice_type_array">
+        <item>D20</item>
+        <item>D10</item>
+        <item>D6</item>
+        <item>D12</item>
+        <item>D4</item>
+        <item>D8</item>
+        <item>D100</item>
+    </string-array>
     <string name="output_label_default">Tirar los Dados</string>
     <string name="roll_button_text">Tirar</string>
     <string name="dice_type_prompt">Elija un tipo dado</string>
+    <string name="d10">d10</string>
+    <string name="d100">d100</string>
+    <string name="d12">d12</string>
+    <string name="d20">d20</string>
+    <string name="d4">d4</string>
+    <string name="d6">d6</string>
+    <string name="d8">d8</string>
 </resources>
