--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -11,8 +11,8 @@
         <item>D100</item>
     </string-array>
     <string name="output_label_default">Tirar los Dados</string>
-    <string name="roll_button_text">Tirar</string>
-    <string name="dice_type_prompt">Elija un tipo dado</string>
+    <string name="roll_button_text">Rodá</string>
+    <string name="dice_type_prompt">Escoha un tipo da dido</string>
     <string name="d10">d10</string>
     <string name="d100">d100</string>
     <string name="d12">d12</string>
@@ -20,4 +20,5 @@
     <string name="d4">d4</string>
     <string name="d6">d6</string>
     <string name="d8">d8</string>
+    <string name="reset_rolls">Reiniciar</string>
 </resources>
